Refactor InterviewAdapter and InterviewListFragment to streamline interview management. Remove reschedule and complete button functionalities from InterviewAdapter, simplifying the UI. Update InterviewListFragment to load interviews based on user email, enhancing data retrieval logic with logging for better debugging. Adjust layout for improved user experience and update navigation to include scheduling interviews.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     6. Paste it below replacing the placeholder text
     -->
     <string name="web_client_id">1087281687437-vtms620hg66vtd88bko6gn7530kg7n06.apps.googleusercontent.com</string>
+    <string name="back">Back</string>
 </resources>
